--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "spatie/laravel-permission": "^5.10",
         "symfony/http-client": "^6.2",
         "symfony/mailgun-mailer": "^6.2"
     },
